--- a/pom.xml
+++ b/pom.xml
@@ -73,13 +73,15 @@
 		  <artifactId>spring-boot-starter-redis</artifactId>
 		  <version>1.3.8.RELEASE </version>
 		</dependency>
-
-	<!-- 	<dependency>
-			<groupId>redis.clients</groupId>
-			<artifactId>jedis</artifactId>
-			<version>2.8.2</version>
+		
+		
+		<dependency>
+       	     <groupId>org.java-websocket</groupId>
+        	     <artifactId>Java-WebSocket</artifactId>
+       		 <version>1.3.4</version>
 		</dependency>
- -->	
+
+		
 	</dependencies>
 
 	<build>
