--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8089
+server.port=8089
 
 #springboot-mybatis config, and spring-mybatis will auto laod this config to do init.
 spring.datasource.url=jdbc:mysql://localhost:3306/sameducation
@@ -8,27 +8,19 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 
-
-# redis
-# java file can use this config by eg: @Value("${redis.host}")
-#redis.host = 127.0.0.1
-#redis.port = 6379
-
-
-
-
-server.port: 8443
-server.ssl.key-store: classpath:keystore.p12
-server.ssl.key-store-password: saratoga
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: tomcat
+#server.port: 8443
+#server.ssl.key-store: classpath:keystore.p12
+#server.ssl.key-store-password: saratoga
+#server.ssl.keyStoreType: PKCS12
+#server.ssl.keyAlias: tomcat
 
 
 #redis  
-spring.redis.hostName=127.0.0.1
+spring.redis.host= 172.17.0.16
 spring.redis.port=6379    
 spring.redis.pool.maxActive=8    
 spring.redis.pool.maxWait=-1    
 spring.redis.pool.maxIdle=8    
 spring.redis.pool.minIdle=0    
 spring.redis.timeout=0 
+spring.redis.password=roomskillredispass119
