--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=saratoga
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
-
+#only https config for local https over tomcat, should comment it for remote depoy build because we have nginx with https
 #server.port: 8443
 #server.ssl.key-store: classpath:keystore.p12
 #server.ssl.key-store-password: saratoga
@@ -15,12 +15,19 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #server.ssl.keyAlias: tomcat
 
 
-#redis  
+#redis
+#for remote deploy build
 spring.redis.host= 172.17.0.16
-spring.redis.port=6379    
-spring.redis.pool.maxActive=8    
-spring.redis.pool.maxWait=-1    
-spring.redis.pool.maxIdle=8    
-spring.redis.pool.minIdle=0    
-spring.redis.timeout=0 
+
+#for remote deploy build
 spring.redis.password=roomskillredispass119
+
+#for local test
+#spring.redis.host=127.0.0.1
+
+spring.redis.port=6379
+spring.redis.pool.maxActive=8
+spring.redis.pool.maxWait=-1
+spring.redis.pool.maxIdle=8
+spring.redis.pool.minIdle=0
+spring.redis.timeout=0
