--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8089
+#server.port=8089
 
 #springboot-mybatis config, and spring-mybatis will auto laod this config to do init.
 spring.datasource.url=jdbc:mysql://localhost:3306/sameducation
@@ -8,22 +8,22 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 #only https config for local https over tomcat, should comment it for remote depoy build because we have nginx with https
-#server.port: 8443
-#server.ssl.key-store: classpath:keystore.p12
-#server.ssl.key-store-password: saratoga
-#server.ssl.keyStoreType: PKCS12
-#server.ssl.keyAlias: tomcat
+server.port: 8443
+server.ssl.key-store: classpath:keystore.p12
+server.ssl.key-store-password: saratoga
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
 
 
-#redis
-#for remote deploy build
-spring.redis.host= 172.17.0.16
 
 #for remote deploy build
-spring.redis.password=roomskillredispass119
+#spring.redis.host= 172.17.0.16
+
+#for remote deploy build
+#spring.redis.password=roomskillredispass119
 
 #for local test
-#spring.redis.host=127.0.0.1
+spring.redis.host=127.0.0.1
 
 spring.redis.port=6379
 spring.redis.pool.maxActive=8
