--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,15 +15,15 @@ server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
 
 
+#for local test
+#spring.redis.host=127.0.0.1
+
 
 #for remote deploy build
 #spring.redis.host= 172.17.0.16
 
 #for remote deploy build
 #spring.redis.password=roomskillredispass119
-
-#for local test
-spring.redis.host=127.0.0.1
 
 spring.redis.port=6379
 spring.redis.pool.maxActive=8
