--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,23 @@
-#server.port=8089
-
-#springboot-mybatis config, and spring-mybatis will auto laod this config to do init.
-spring.datasource.url=jdbc:mysql://localhost:3306/sameducation
-spring.datasource.username=root
-spring.datasource.password=saratoga
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-
-#only https config for local https over tomcat, should comment it for remote depoy build because we have nginx with https
-server.port: 8443
-server.ssl.key-store: classpath:keystore.p12
-server.ssl.key-store-password: saratoga
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: tomcat
+#for local only https config for local https over tomcat, should comment it for remote depoy build because we have nginx with https
+#server.port: 8443
+#server.ssl.key-store: classpath:keystore.p12
+#server.ssl.key-store-password: saratoga
+#server.ssl.keyStoreType: PKCS12
+#server.ssl.keyAlias: tomcat
 
 
 #for local test
 #spring.redis.host=127.0.0.1
 
 
-#for remote deploy build
-#spring.redis.host= 172.17.0.16
+# for remote depoy build
+server.port=8089
 
 #for remote deploy build
-#spring.redis.password=roomskillredispass119
+spring.redis.host= 172.17.0.16
+
+#for remote deploy build
+spring.redis.password=roomskillredispass119
 
 spring.redis.port=6379
 spring.redis.pool.maxActive=8
@@ -31,3 +25,18 @@ spring.redis.pool.maxWait=-1
 spring.redis.pool.maxIdle=8
 spring.redis.pool.minIdle=0
 spring.redis.timeout=0
+
+
+#springboot-mybatis config, and spring-mybatis will auto laod this config to do init.
+spring.datasource.url=jdbc:mysql://172.17.16.16:3306/sanguskillroom
+spring.datasource.username=samremote
+spring.datasource.password=makesamskillgood666
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+# 资源缓存时间，单位秒
+spring.resources.cache-period=604800 
+# 开启gzip压缩
+spring.resources.chain.gzipped=true 
+# 启用缓存
+spring.resources.chain.cache=false
