--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,9 @@ spring.redis.timeout=0
 
 #springboot-mybatis config, and spring-mybatis will auto laod this config to do init.
 spring.datasource.url=jdbc:mysql://172.17.16.16:3306/sanguskillroom
+
+#spring.datasource.url=jdbc:mysql://sh-cdb-8hq4s7xd.sql.tencentcdb.com:62985/sanguskillroom
+
 spring.datasource.username=samremote
 spring.datasource.password=makesamskillgood666
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
